--- a/dd_cv.css
+++ b/dd_cv.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap");
+<link href='https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display&display=swap' rel='stylesheet' type='text/css'>
 
 /* Main text is monserrat*/
 body {
