--- a/dd_cv.css
+++ b/dd_cv.css
@@ -30,17 +30,26 @@ sup {
 
 * {
   /* Override default right margin for sidebar*/
-  --pagedjs-margin-right: 0.2in;
-  --pagedjs-margin-left: 0.2in;
+  --pagedjs-margin-top: 0.5in;
+  --pagedjs-margin-bottom: 0.5in;
+  --pagedjs-margin-right: 0.15in; /* adjust alignment of sidebar content*/
+  --pagedjs-margin-left: 0.02in;
+}
+
+.date{
+  font-size: 0.7rem;
+  text-align: left;
 }
 
 /* Customize some of the sizing variables */
 :root {
-  --sidebar-width: 12rem; /* Shrink sidebar width  */
+  --sidebar-width: 8rem; /* Shrink sidebar width  */
   --sidebar-background-color: #f7fbff; /* Make sidebar blue */
   --sidebar-horizontal-padding: 0.01in; /* Reduce sidebar padding */
   --decorator-outer-dim: 10px; /* Make position deliniating circles larger */
   --decorator-border: 2px solid #bdd7e7; /* Make timeline a blue as well*/
+  --margin-right: 0.3in;
+  --margin-left: 0.1in;
 }
 
 .details .place {
@@ -68,7 +77,7 @@ sup {
 
 /* Move closer to start and up towards header */
 .aside ul {
-  padding-left: 1rem;
+  padding-left: 0.1rem;
 }
 
 .aside li::before {
@@ -81,7 +90,7 @@ sup {
 .aside {
   width: calc(var(--sidebar-width) + 9px);
   line-height: 1.2;
-  font-size: 0.75rem;
+  font-size: 0.6rem;
 }
 
 /* Make little circle outline be a light blue */
