--- a/dd_cv.css
+++ b/dd_cv.css
@@ -3,8 +3,9 @@
 
 /* Main text is monserrat*/
 body {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 300;
+  font-family: "Helvetica", sans-serif;
+  font-weight: 400;
+  font-size: 0.45rem;
   line-height: 1.3;
   color: #444;
 }
@@ -13,13 +14,13 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Playfair Display", serif;
+  font-family: "Helvetica", serif;
   color: #000;
 }
 
 /* When in PDF export mode make sure superscripts are nice and small and italic */
 sup {
-  font-size: 0.45rem;
+  font-size: 0.55rem;
   font-style: italic;
 }
 
